# pRETE

./: .editorconfig  .gitignore  .mcp.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.obsidian/: community-plugins.json  workspace.json
.obsidian/plugins/blackglass/: data.json  main.js  manifest.json  styles.css
plan/: PARSER-PLAN-STEP-4.md  PARSER-PLAN-STEP-5.md  PARSER-PLAN-STEP-6.md  PARSER-PLAN-STEP-7.md  PARSER-PLAN-STEP-ES1.md  PLAN_PHASE_8.md
src/examples/: blocks_world.py  blocks_world_prl.py  family_tree.py  family_tree_prl.py  fraud_detection.py  fraud_detection_prl.py  loan_application_prl.py  negation.py  negation_prl.py  sharing.py  sharing_prl.py  temperature_alarm.py
src/examples/declarative/: aggregation_prl.py  compact_patterns_prl.py  disjunction_prl.py  domain.py  event_stream_prl.py  existence_check_prl.py  identity_key_prl.py  imported_types_prl.py  inheritance_prl.py  self_modify_prl.py  temperature_alarm_prl.py  universal_prl.py
src/examples/prl/: blocks_world.prl
src/examples/programmatic/: loan_application.py
src/rete/: __init__.py  alpha.py  beta.py  condition.py  engine.py  fact.py  network.py  prl.py  prl_ast.py  prl_lexer.py  prl_parser.py  wme.py
tests/: test_alpha.py  test_beta.py  test_condition.py  test_engine.py  test_examples.py  test_fact.py  test_integration.py  test_network.py  test_pattern.py  test_prl.py  test_prl_ast.py  test_prl_compiler.py  test_prl_lexer.py  test_prl_parser.py  test_ul.py  test_wme.py
