[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prete"
version = "2.5.1"
description = "Pure-Python implementation of the Rete algorithm for production rule systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Stefano Bragaglia", email = "stefano-bragaglia@users.noreply.github.com"}]
keywords = ["rete", "rules", "expert-system", "production-rules", "inference", "pattern-matching", "rule-engine"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/stefano-bragaglia/pRETE"
Source = "https://github.com/stefano-bragaglia/pRETE"
Changelog = "https://github.com/stefano-bragaglia/pRETE/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest ==9.1.1",
    "pytest-cov ==7.1.0",
    "radon ==6.0.1",
    "ruff ==0.15.18",
    "xenon ==0.9.3",
    "prete",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rete"]

[tool.hatch.envs.default.scripts]
easy = "radon cc -s src/ tests/"
lint = "ruff check src/ tests/"
test = "pytest --cov"
check = [
    "xenon --max-absolute A --max-modules A --max-average A src/ tests/",
    "ruff check src/ tests/",
    "pytest --cov",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "C90",
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/rete"]
omit = ["src/rete/drl.py"]

[tool.coverage.report]
fail_under = 80
